Infrastructure/templates/sonar/sonar-postgres.yml
apiVersion: v1
kind: List
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: sonarqube
      template: postgresql-persistent-template
    name: postgresql
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      name: postgresql
    strategy:
      activeDeadlineSeconds: 21600
      recreateParams:
        timeoutSeconds: 600
      resources: {}
      type: Recreate
    template:
      metadata:
        labels:
          app: sonarqube
          name: postgresql
      spec:
        containers:
          - env:
              - name: POSTGRESQL_USER
                value: sonar
              - name: POSTGRESQL_PASSWORD
                value: sonar
              - name: POSTGRESQL_DATABASE
                value: sonar
            image: >-
              registry.access.redhat.com/rhscl/postgresql-96-rhel7@sha256:0400ad0dacf89cd6474b3b70c5b6b4c8466d0f36def998aba83aae61f38f3a53
            imagePullPolicy: IfNotPresent
            livenessProbe:
              exec:
                command:
                  - /bin/sh
                  - '-i'
                  - '-c'
                  - pg_isready -h 127.0.0.1 -p 5432
              failureThreshold: 3
              initialDelaySeconds: 30
              periodSeconds: 10
              successThreshold: 1
              timeoutSeconds: 1
            name: postgresql
            ports:
              - containerPort: 5432
                protocol: TCP
            readinessProbe:
              exec:
                command:
                  - /bin/sh
                  - '-i'
                  - '-c'
                  - >-
                    psql -h 127.0.0.1 -U $POSTGRESQL_USER -q -d
                    $POSTGRESQL_DATABASE -c 'SELECT 1'
              failureThreshold: 3
              initialDelaySeconds: 5
              periodSeconds: 10
              successThreshold: 1
              timeoutSeconds: 1
            resources:
              limits:
                memory: 512Mi
            securityContext:
              capabilities: {}
              privileged: false
            terminationMessagePath: /dev/termination-log
            terminationMessagePolicy: File
            volumeMounts:
              - mountPath: /var/lib/pgsql/data
                name: postgresql-data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
          - name: postgresql-data
            persistentVolumeClaim:
              claimName: postgresql
    test: false
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: postgresql
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 4Gi
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
    labels:
      app: sonarqube
      template: postgresql-persistent-template
    name: postgresql
  spec:
    ports:
      - name: postgresql
        port: 5432
        protocol: TCP
        targetPort: 5432
    selector:
      name: postgresql
    sessionAffinity: None
    type: ClusterIP
