Infrastructure/templates/sonar/sonar-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: sonarqube
  name: sonarqube
spec:
  port:
    targetPort: 9000-tcp
  to:
    kind: Service
    name: sonarqube
    weight: 100
  wildcardPolicy: None
